--- a/train-pipline/pipline_config/config.json
+++ b/train-pipline/pipline_config/config.json
@@ -5,21 +5,22 @@
   "generate_data_for_val": true,
   "calc_score_on_val_data": true,
   "push_best": true,
-  "train_dataset": "",
-  "val_dataset": "",
+  "train_dataset_len": 100,
+  "val_dataset_len": 10,
+  "train_dataset": "generated_data/train_and_val_dataset/train.tsv",
+  "val_dataset": "generated_data/train_and_val_dataset/val.tsv",
   "model_type": "google/mt5-small",
   "epochs": 10,
   "batch_size": 1,
   "wand_projekt": "mt-t5-ria-news",
-  "checkpoint_path": "mt5_chkpnt",
+  "checkpoint_path": "generated_data/mt5_chkpnt",
   "lr": 1e-4,
   "gpus": -1,
   "precision": 32,
   "grad_accum_steps": 32,
-  "save_orig_torch_path": "mt5_chkpnt_orig_torch",
-  "save_generate_file_path": "",
+  "save_orig_torch_path": "generated_data/mt5_chkpnt_orig_torch",
+  "save_generate_file_path": "generated_data/generated_val_data",
   "beam": 2,
   "device": "cpu",
-  "dataset_to_save_with_score": "",
-  "elmo_path": ""
+  "dataset_to_save_with_score": "generated_data/generated_val_data_with_score"
 }
